cluster/core/rook-ceph/rook-ceph/ingress-CRD.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
  labels:
    app.kubernetes.io/name: rook-ceph
spec:
  ingressClassName: nginx
  rules:
    - host: "rook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /rook/
            pathtype: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 8443
  tls:
    - hosts:
        - "rook.${SECRET_DOMAIN}"
      secretName: "rook-tls"
